Add slack channel (connector) module and example of usage

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ sentence-transformers = "*"
 spacy = "*"
 spacy-transformers = "*"
 spacy-lookups-data = "*"
+slack-bolt = "*"
 talosbot = {file = ".", editable = true}
 
 [dev-packages]
