--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
     spacy
     spacy-transformers
     spacy-lookups-data
+    slack-bolt
 
 [options.entry_points]
 console_scripts =
